icons = files(
  'icon_01n_2x.bmp',
  'icon_02n_2x.bmp',
  'icon_03n_2x.bmp',
  'icon_04n_2x.bmp',
  'icon_09n_2x.bmp',
  'icon_10n_2x.bmp',
  'icon_11n_2x.bmp',
  'icon_13n_2x.bmp',
  'icon_50n_2x.bmp',
  'icon_direction.bmp',
  'icon_display_settings.bmp',
  'icon_favorite.bmp',
  'icon_key.bmp',
  'icon_measuring_tape.bmp',
  'icon_menu.bmp',
  'icon_radio_button_checked.bmp',
  'icon_radio_button_unchecked.bmp',
  'icon_software_version.bmp',
  'icon_software_version_check.bmp',
  'icon_taranis.bmp',
  'icon_wallpaper.bmp',
  'icon_warning.bmp'
)

install_data(sources: ['icon_taranis.bmp', 'icon_taranis_f.bmp'], install_dir: '/icons')
