icons = files(
  'icon_01d_2x.bmp',
  'icon_02d_2x.bmp',
  'icon_03d_2x.bmp',
  'icon_04d_2x.bmp',
  'icon_09d_2x.bmp',
  'icon_10d_2x.bmp',
  'icon_11d_2x.bmp',
  'icon_13d_2x.bmp',
  'icon_50d_2x.bmp',
  'icon_close.bmp',
  'icon_direction.bmp',
  'icon_display_settings.bmp',
  'icon_favorite.bmp',
  'icon_key.bmp',
  'icon_measuring_tape.bmp',
  'icon_menu.bmp',
  'icon_radio_button_checked.bmp',
  'icon_radio_button_unchecked.bmp',
  'icon_refresh.bmp',
  'icon_software_version.bmp',
  'icon_software_version_check.bmp',
  'icon_sunrise.bmp',
  'icon_sunset.bmp',
  'icon_taranis.bmp',
  'icon_wallpaper.bmp',
  'icon_warning.bmp'
)

install_data(sources: ['icon_taranis.bmp', 'icon_taranis_f.bmp'], install_dir: '/sinstall/icons')
