i18n.gettext('taranis',
             args: ['--from-code=UTF-8',
                    '--add-comments',
                    '--keyword=GetLangText',
                    '--keyword=GetLangTextF',
                    '--keyword=GetLangTextPlural'],
             install: false)

po_files = ['cs.po', 'fr.po', 'pl.po', 'sr.po']
